# wmlenovo

./: AUTHORS  ChangeLog  INSTALL  Makefile.in  README  THANKS  TODO  config.h.in  configure  configure.ac
.github/ISSUE_TEMPLATE/: bug_report.md
doc/: Makefile  Makefile.am  Makefile.in  wmlenovo.1
doc/examples/: wmlenovorc  wmlenovorc.lcd
src/: Makefile  Makefile.am  Makefile.in  backlight_off.xpm  backlight_on.xpm  dockapp.c  dockapp.h  files.h  main.c  parts.xpm
src/.deps/: dockapp.Po  main.Po
