
man_MANS = wmlenovo.1

EXTRA_DIST = $(man_MANS) $(examples_DATA) $(screenshots_DATA) $(doc_DATA)

doc_DATA = ../ChangeLog ../AUTHORS ../COPYING ../README ../THANKS

examples_DATA = examples/*

screenshots_DATA = screenshots/*

examplesdir = $(docdir)/examples

screenshotsdir = $(docdir)/screenshots


